# Taml

./: .editorConfig  .gitignore  CNAME  README.md  TAML-IEEE-SPEC.md  TAML-SPEC.md  documentation.html  index.html  package-lock.json  squad.config.ts
.github/: copilot-instructions.md
.github/workflows/: cli-build.yml  cpp.yml  dotnet-tests.yml
.squad/: .first-run  COMMIT_MESSAGE.txt  audit-js-implementation.md  config.json  routing.md  team.md  test-coverage-audit.md
.squad/agents/dale/: README.md  charter.md  history.md
.squad/agents/daryl/: charter.md  history.md
.squad/agents/glenn/: charter.md  history.md
.squad/agents/rick/: charter.md  history.md
.squad/agents/scribe/: charter.md  history.md
.squad/agents/shane/: DOTNET-AUDIT-REPORT.md  charter.md  history.md
.squad/casting/: history.json  policy.json  registry.json
.squad/decisions/: decisions.md
.squad/decisions/inbox/: dale-m1-verification.md  glenn-m1-implementation.md  rick-ieee-sync.md  rick-spec-clarifications.md
.squad/identity/: now.md  wisdom.md
.squad/log/: 2026-03-05T15-21-project-analysis.md
.squad/orchestration-log/: 2026-03-05T15-21-dale-test-audit.md  2026-03-05T15-21-daryl-python-audit.md  2026-03-05T15-21-glenn-js-audit.md  2026-03-05T15-21-rick-project-analysis.md  2026-03-05T15-21-shane-dotnet-audit.md  2026-03-05T15-35-m1-wave1-daryl.md  2026-03-05T15-35-m1-wave1-glenn.md  2026-03-05T15-35-m1-wave1-rick.md  2026-03-05T15-35-m1-wave1-shane.md  2026-03-05T15-50-m1-wave2-dale.md  2026-03-05T15-50-m1-wave2-rick.md
C/: .gitignore  Makefile  README.md
C/examples/: example_basic.c
C/include/: taml.h
C/src/: converters.c  parser.c  serializer.c  utils.c  validator.c  value.c
C/tests/: test_basic.c
cpp/: .gitignore  CMakeLists.txt  README.md
cpp/.github/workflows/: ci.yml
cpp/include/: Taml.h
cpp/include/Taml/: Converter.h  Document.h  Exception.h  Serializer.h  Validator.h
cpp/src/: Converter.cpp  Document.cpp  Exception.cpp  Serializer.cpp  Validator.cpp
cpp/tests/: test_main.cpp
dotnet/: dotnet.sln
dotnet/TAML.Configuration/: ConfigurationExtensions.cs  TAML.Configuration.csproj  TamlConfigurationProvider.cs
dotnet/TAML.Core/: TAML.Core.csproj  TAMLException.cs  TamlConverter.cs  TamlDocument.cs  TamlSerializer.cs
dotnet/TAML.Tests/: TAML.Tests.csproj  TAMLExceptionTests.cs  TamlConfigurationTests.cs  TamlConverterTests.cs  TamlSerializerTests.cs
examples/: cloud-infrastructure.taml  cloud-infrastructure.yaml  web-app-config.taml
javascript/: index.js  test.js
python/: IMPLEMENTATION.md  LICENSE  README.md  USAGE.md  example.py  pyproject.toml  requirements.txt  setup.py  test_basic.py
python/taml/: __init__.py  parser.py  serializer.py
python/tests/: __init__.py  test_milestone1.py  test_parser.py  test_roundtrip.py  test_serializer.py
rust/: Cargo.toml  README.md
rust/examples/: basic.rs
rust/src/: error.rs  lib.rs  parser.rs  serializer.rs  validator.rs  value.rs
rust/tests/: integration_test.rs
standards/0.1/: 07-complex-example.taml  README.md
tools/vscode-taml/: .vscodeignore  BUILD.md  CHANGELOG.md  MERGE-SUMMARY.md  README.md  package.json  tsconfig.json
tools/vscode-taml/client/: package.json
tools/vscode-taml/client/src/: extension.ts
tools/vscode-taml/server/: package.json
tools/vscode-taml/server/src/: server.ts
