[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taml-python"
version = "0.1.0"
description = "Tab Accessible Markup Language (TAML) parser and serializer for Python"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
keywords = ["taml", "parser", "serializer", "markup", "tab", "config"]
authors = [
    {name = "TAML Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
]

[project.urls]
Homepage = "https://github.com/yourusername/taml"
Documentation = "https://github.com/yourusername/taml/blob/main/python/README.md"
Repository = "https://github.com/yourusername/taml"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["taml"]
omit = ["tests/*"]
